5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4079/executions/1876_1599.log
== TEST (2019-07-03 18:03:41) 
-- CODE:
from numpy import*

x=array(eval(int())
-- ERROR:
File "XXXX", line 4
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:03:53) 
-- CODE:
from numpy import*

x=array(eval(int()))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:04:10) 
-- CODE:
from numpy import*

x= array(eval(input()))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:52:10) 
-- CODE:
from numpy import*

x= array(eval(float(input("")))


-- ERROR:
File "XXXX", line 5
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:52:17) 
-- CODE:
from numpy import*

x= array(eval(float(input("")))
-- ERROR:
File "XXXX", line 4
    
                                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 18:53:12) 
-- CODE:
from numpy import*

x= array(eval(float(input("")))
if(80==0,15):
	
-- EXECUTION TIME:
0.797472
-- ERROR:
  File "/home/codebench/codes/1876/1599/main.py", line 4
    if(80==0,15):
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:53:15) 
-- CODE:
from numpy import*

x= array(eval(float(input("")))
if(80==0,15):
	
-- ERROR:
File "XXXX", line 4
    if(80==0,15):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:53:35) 
-- CODE:
from numpy import*

x= array(eval(float(input("")))
			if(80==0,15):
	
-- ERROR:
File "XXXX", line 4
    if(80==0,15):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:53:39) 
-- CODE:
from numpy import*

x= array(eval(float(input("")))
if(80==0,15)
	
-- ERROR:
File "XXXX", line 6
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:53:45) 
-- CODE:
from numpy import*

x= array(eval(float(input("")))
			
if(80==0,15)
-- ERROR:
File "XXXX", line 6
    
                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:54:29) 
-- CODE:
from numpy import*

x= array(eval(float(input("")))
custo=80

if(80==0,15):
		
-- ERROR:
File "XXXX", line 4
    custo=80
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:54:35) 
-- CODE:
from numpy import*

x= array(eval(float(input("")))
cust=80

if(80==0,15):
		
-- ERROR:
File "XXXX", line 4
    cust=80
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:54:39) 
-- CODE:
from numpy import*

x= array(eval(float(input("")))
cst=80

if(80==0,15):
		
-- ERROR:
File "XXXX", line 4
    cst=80
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:54:41) 
-- CODE:
from numpy import*

x= array(eval(float(input("")))
cst=80

if(80==0,15):
		
-- ERROR:
File "XXXX", line 4
    cst=80
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:54:50) 
-- CODE:
from numpy import*

x= array(eval(float(input("")))
cst=0,15

if(80==0,15):
		
-- ERROR:
File "XXXX", line 4
    cst=0,15
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:55:06) 
-- CODE:
from numpy import*

x= array(eval(float(input("")))
n=0
custo=80
if(80==0,15):
		
-- ERROR:
File "XXXX", line 4
    n=0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:55:17) 
-- CODE:
from numpy import*

x= array(eval(float(input("")))
custo=80
if(80==0,15):
		
-- ERROR:
File "XXXX", line 4
    custo=80
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:55:28) 
-- CODE:
from numpy import*

x= array(eval(float(input("")))
for 80
if(80==0,15):
		
-- ERROR:
File "XXXX", line 5
    if(80==0,15):
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:55:50) 
-- CODE:
from numpy import*

x= array(eval(float(input("")))
for i in range(80)
if(80==0,15):
		
-- ERROR:
File "XXXX", line 5
    if(80==0,15):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:55:59) 
-- CODE:
from numpy import*

x= array(eval(float(input("")))
for i in range(80):
			
if(80==0,15):
		
-- ERROR:
File "XXXX", line 4
    for i in range(80):
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:56:44) 
-- CODE:
from numpy import*

x= array(eval(float(input("")))
for i in range(80)
			
if(desconto == 0,15)
		
-- ERROR:
File "XXXX", line 8
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:56:52) 
-- CODE:
from numpy import*

x= array(eval(float(input("")))
for i in range(80)
			
if(desconto == 0,15):
			
-- ERROR:
File "XXXX", line 6
    if(desconto == 0,15):
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:57:07) 
-- CODE:
from numpy import*

x= array(eval(float(input("")))
for i in range(80)
			
if(desconto == 0,15)
	print(x)
			
-- ERROR:
File "XXXX", line 7
    print(x)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:58:18) 
-- CODE:
from numpy import*

desconto=float(input(""))
for i in range(80)
			
if(desconto == 0,15)
			
-- ERROR:
File "XXXX", line 4
    for i in range(80)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:58:37) 
-- CODE:
from numpy import*

desconto=float(input(""))

for i in range(80R$)
			
if(desconto == 0,15)
			
-- ERROR:
File "XXXX", line 5
    for i in range(80R$)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:58:42) 
-- CODE:
from numpy import*

desconto=float(input(""))

for i in range(80R$):
			
if(desconto == 0,15)
			
-- ERROR:
File "XXXX", line 5
    for i in range(80R$):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:58:54) 
-- CODE:
from numpy import*

desconto=float(input(""))
custo=80R$			
if(desconto == 0,15)
			
-- ERROR:
File "XXXX", line 4
    custo=80R$			
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:59:02) 
-- CODE:
from numpy import*

desconto=float(input(""))
custo=80$			
if(desconto == 0,15)
			
-- ERROR:
File "XXXX", line 4
    custo=80$			
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:59:06) 
-- CODE:
from numpy import*

desconto=float(input(""))
	custo=80$			
if(desconto == 0,15)
			
-- ERROR:
File "XXXX", line 4
    custo=80$			
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:59:12) 
-- CODE:
from numpy import*

desconto=float(input(""))
custo=80		
if(desconto == 0,15)
			
-- ERROR:
File "XXXX", line 5
    if(desconto == 0,15)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:59:21) 
-- CODE:
from numpy import*

desconto=float(input(""))
custo=80		
if(desconto == 0,15):
			
-- ERROR:
File "XXXX", line 7
    
       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 18:59:49) 
-- CODE:
from numpy import*

desconto=float(input(""))
custo=80		
if(desconto == 0,15):

	print(desconto)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:00:17) 
-- CODE:
from numpy import*

desconto=array(eval(float(input("")))
custo=80		
if(desconto == 0,15):

	print(desconto)
-- ERROR:
File "XXXX", line 4
    custo=80		
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:00:26) 
-- CODE:
from numpy import*

desconto=array(float(input(""))
custo=80		
if(desconto == 0,15):

	print(desconto)
-- ERROR:
File "XXXX", line 4
    custo=80		
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:00:38) 
-- CODE:
from numpy import*

desconto=array(int(input(""))
custo=80		
if(desconto == 0,15):

	print(desconto)
-- ERROR:
File "XXXX", line 4
    custo=80		
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:00:52) 
-- CODE:
from numpy import*

desconto=eval(float(input(""))
custo=80		
if(desconto == 0,15):

	print(desconto)
-- ERROR:
File "XXXX", line 4
    custo=80		
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:01:02) 
-- CODE:
from numpy import*

desconto=eval(float(input(""))
custo=80,0	
if(desconto == 0,15):

	print(desconto)
-- ERROR:
File "XXXX", line 4
    custo=80,0	
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:01:20) 
-- CODE:
from numpy import*

desconto=eval(float(input(""))
custo=float(80,0)
if(desconto == 0,15):

	print(desconto)
-- ERROR:
File "XXXX", line 4
    custo=float(80,0)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:01:36) 
-- CODE:
from numpy import*

desconto=eval(float(input(""))
custo=float(input(80,0))
if(desconto == 0,15):

	print(desconto)
-- ERROR:
File "XXXX", line 4
    custo=float(input(80,0))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:01:48) 
-- CODE:
from numpy import*

desconto=eval(float(input(""))
custo=float("80,0"))
if(desconto == 0,15):

	print(desconto)
-- ERROR:
File "XXXX", line 4
    custo=float("80,0"))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:01:52) 
-- CODE:
from numpy import*

desconto=eval(float(input(""))
custo=float("80,0")
if(desconto == 0,15):

	print(desconto)
-- ERROR:
File "XXXX", line 4
    custo=float("80,0")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:02:00) 
-- CODE:
from numpy import*

desconto=eval(float(input(""))
custo=("80,0")
if(desconto == 0,15):

	print(desconto)
-- ERROR:
File "XXXX", line 4
    custo=("80,0")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:02:04) 
-- CODE:
from numpy import*

desconto=eval(float(input(""))
custo("80,0")
if(desconto == 0,15):

	print(desconto)
-- ERROR:
File "XXXX", line 4
    custo("80,0")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:02:11) 
-- CODE:
from numpy import*

desconto=eval(float(input(""))
custo "80,0"
if(desconto == 0,15):

	print(desconto)
-- ERROR:
File "XXXX", line 4
    custo "80,0"
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:02:19) 
-- CODE:
from numpy import*

desconto=eval(float(input(""))
custo 80,0
if(desconto == 0,15):

	print(desconto)
-- ERROR:
File "XXXX", line 4
    custo 80,0
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:02:29) 
-- CODE:
from numpy import*

desconto=eval(float(input(""))
custo(80,0)
if(desconto == 0,15):

	print(desconto)
-- ERROR:
File "XXXX", line 4
    custo(80,0)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:02:35) 
-- CODE:
from numpy import*

desconto=eval(float(input(""))
custo=80,0
if(desconto == 0,15):

	print(desconto)
-- ERROR:
File "XXXX", line 4
    custo=80,0
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:03:13) 
-- CODE:
from numpy import*

desconto=eval(float(input(""))
custo_total=80,0

if(desconto == 0,15):

	print(desconto)
-- ERROR:
File "XXXX", line 4
    custo_total=80,0
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:03:42) 
-- CODE:
from numpy import*

desconto=eval(float(input(""))
total=float(input("")

if(desconto == 0,15):

	print(desconto)
-- ERROR:
File "XXXX", line 4
    total=float(input("")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:03:52) 
-- CODE:
from numpy import*

desconto=eval(float(input(""))
total_compra=float(input("")

if(desconto == 0,15):

	print(desconto)
-- ERROR:
File "XXXX", line 4
    total_compra=float(input("")
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:04:21) 
-- CODE:
from numpy import*

desconto=eval(float(input(""))
total=float(input("")
total=total+desconto
if(desconto == 0,15):

	print(desconto)
-- ERROR:
File "XXXX", line 4
    total=float(input("")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:04:34) 
-- CODE:
from numpy import*

desconto=eval(float(input(""))
total=float(input("valor")
total=total+desconto
if(desconto == 0,15):

	print(desconto)
-- ERROR:
File "XXXX", line 4
    total=float(input()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:04:43) 
-- CODE:
from numpy import*

total=float(input("valor")
total=total+desconto
if(desconto == 0,15):

	print(desconto)
-- ERROR:
File "XXXX", line 4
    total=total+desconto
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:05:06) 
-- CODE:
from numpy import*

total=float(input("valor")
compra=compra+desconto
if(desconto == 0,15):

	print(desconto)
-- ERROR:
File "XXXX", line 4
    compra=compra+desconto
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:05:43) 
-- CODE:
from numpy import*

vet=array(float(input("valor")
=compra+desconto
if(desconto == 0,15):

	print(desconto)
-- ERROR:
File "XXXX", line 5
    if(desconto == 0,15):
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:06:30) 
-- CODE:
from numpy import*

vet=array(float(input("valor")
compra=float("total")
if(desconto == 0,15):

	print(desconto)
-- ERROR:
File "XXXX", line 4
    compra=float("total")
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:06:47) 
-- CODE:
from numpy import*

vet=array(float(input("valor")
compra=float(input(""))
if(desconto == 0,15):

	print(desconto)
-- ERROR:
File "XXXX", line 4
    compra=float(input(""))
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:07:01) 
-- CODE:
from numpy import*

vet=array(float(input("valor")
compra=eval(float(input("")))
if(desconto == 0,15):

	print(desconto)
-- ERROR:
File "XXXX", line 4
    compra=eval(float(input("")))
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:07:09) 
-- CODE:
from numpy import*

vet=array(float(input("valor")
compra=ones(float(input("")))
if(desconto == 0,15):

	print(desconto)
-- ERROR:
File "XXXX", line 4
    compra=ones(float(input("")))
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:07:47) 
-- CODE:
from numpy import*

vet=array(float(input("valor")
if(desconto == 0,15):

	print(desconto)
-- ERROR:
File "XXXX", line 4
    if(desconto == 0,15):
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:07:51) 
-- CODE:
from numpy import*

vet=array(float(input("valor")
if(desconto == 0,15)

	print(desconto)
-- ERROR:
File "XXXX", line 6
    print(desconto)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:08:14) 
-- CODE:
from numpy import*

vet=array(float(input("valor")
if(desconto == 0,15)
	desconto=desconto+vet
print(desconto)
-- ERROR:
File "XXXX", line 5
    desconto=desconto+vet
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:08:37) 
-- CODE:
from numpy import*

vet=array(float(input("valor")
if(desconto == 0,15)
	vet=vet+desconto)
print(desconto)
-- ERROR:
File "XXXX", line 5
    vet=vet+desconto)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:08:58) 
-- CODE:
from numpy import*

vet=array(float(input("valor")
if(desconto == 0,15)
	vet=vet+desconto)
print(round(desconto,2))
-- ERROR:
File "XXXX", line 5
    vet=vet+desconto)
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:09:08) 
-- CODE:
from numpy import*

vet=array(float(input("valor")
if(desconto == 0,15)
	descont=vet+desconto)
print(round(desconto,2))
-- ERROR:
File "XXXX", line 5
    descont=vet+desconto)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 19:09:17) 
-- CODE:
from numpy import*

vet=array(float(input("valor")
if(desconto == 0,15)
	descont=vet+1)
print(round(desconto,2))
-- EXECUTION TIME:
0.649986
-- ERROR:
  File "/home/codebench/codes/1876/1599/main.py", line 5
    descont=vet+1)
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:09:18) 
-- CODE:
from numpy import*

vet=array(float(input("valor")
if(desconto == 0,15)
	descont=vet+1)
print(round(desconto,2))
-- ERROR:
File "XXXX", line 5
    descont=vet+1)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:09:24) 
-- CODE:
from numpy import*

vet=array(float(input("valor")
if(desconto == 0,15)
	desconto=vet+1)
print(round(desconto,2))
-- ERROR:
File "XXXX", line 5
    desconto=vet+1)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:10:04) 
-- CODE:
from numpy import*

vet=array(float(input("")
					 
if(desconto == 0,15)
	desconto=vet+1)
print(round(desconto,2))
-- ERROR:
File "XXXX", line 6
    desconto=vet+1)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:21:49) 
-- CODE:
from numpy import*

vet=array(float(input([[89.99,74.65,105.75,325.12]])
					 
if(desconto == 0,15)
	desconto=vet+1)
print(round(desconto,2))
-- ERROR:
File "XXXX", line 6
    desconto=vet+1)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:21:57) 
-- CODE:
from numpy import*

vet=array(float(input([[89.99,74.65,105.75,325.12]])
					 
if(desconto == 0,15)
print(round(desconto,2))
-- ERROR:
File "XXXX", line 6
    print(round(desconto,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:22:03) 
-- CODE:
from numpy import*

vet=array(float(input([[89.99,74.65,105.75,325.12]])
					 
if(desconto == 0,15)
	print(round(desconto,2))
-- ERROR:
File "XXXX", line 6
    print(round(desconto,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:22:11) 
-- CODE:
from numpy import*

vet=array(float(input([[89.99,74.65,105.75,325.12]])
					 
print(round(desconto,2))
-- ERROR:
File "XXXX", line 5
    print(round(desconto,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:22:20) 
-- CODE:
from numpy import*

vet=array(float(input([[89.99,74.65,105.75,325.12]])
					 
print(round(vet,2))
-- ERROR:
File "XXXX", line 5
    print(round(vet,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:23:28) 
-- CODE:
from numpy import*

vet=array(int(input([[89.99,74.65,105.75,325.12]])
custo=float(input("total da compra: "))				 
print(round(vet,2))
-- ERROR:
File "XXXX", line 4
    custo=float(input())				 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:23:38) 
-- CODE:
from numpy import*

vet=array(int(input([[89.99,74.65,105.75,325.12]])
custo(float(input("total da compra: "))				 
print(round(vet,2))
-- ERROR:
File "XXXX", line 4
    custo(float(input())				 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:23:47) 
-- CODE:
from numpy import*

vet=array(int(input([[89.99,74.65,105.75,325.12]])
custo("total da compra: ")			 
print(round(vet,2))
-- ERROR:
File "XXXX", line 4
    custo("total da compra: ")			 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:23:53) 
-- CODE:
from numpy import*

vet=array(int(input([[89.99,74.65,105.75,325.12]])
custo("total da compra")			 
print(round(vet,2))
-- ERROR:
File "XXXX", line 4
    custo("total da compra")			 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:24:01) 
-- CODE:
from numpy import*

vet=array(int(input([[89.99,74.65,105.75,325.12]])
custo(total da compra)			 
print(round(vet,2))
-- ERROR:
File "XXXX", line 4
    custo(total da compra)			 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:24:22) 
-- CODE:
from numpy import*

vet=array(int(input([[89.99,74.65,105.75,325.12]])
custo_compra= 80			 
print(round(vet,2))
-- ERROR:
File "XXXX", line 4
    custo_compra= 80			 
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:24:33) 
-- CODE:
from numpy import*

vet=array(int(input([[89.99,74.65,105.75,325.12]])
custo_total= 80			 
print(round(vet,2))
-- ERROR:
File "XXXX", line 4
    custo_total= 80			 
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:24:48) 
-- CODE:
from numpy import*

vet=array(int(input([[89.99,74.65,105.75,325.12]])
custo_total= 80
desc=0,15
print(round(vet,2))
-- ERROR:
File "XXXX", line 4
    custo_total= 80
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:25:45) 
-- CODE:
from numpy import*

vet=array(int(input([[89.99,74.65,105.75,325.12]])
desc=0,15
custo=80
print(round(vet,2))
-- ERROR:
File "XXXX", line 4
    desc=0,15
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:26:24) 
-- CODE:
from numpy import*

vet=array(int(input([[89.99,74.65,105.75,325.12]])
desc_vet=0,15
custo=
print(round(vet,2))
-- ERROR:
File "XXXX", line 4
    desc_vet=0,15
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:26:29) 
-- CODE:
from numpy import*

vet=array(int(input([[89.99,74.65,105.75,325.12]])
desc_vet1=0,15
custo=
print(round(vet,2))
-- ERROR:
File "XXXX", line 4
    desc_vet1=0,15
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:26:42) 
-- CODE:
from numpy import*

vet=array(int(input([[89.99,74.65,105.75,325.12]])
vet1=0,15
custo=
print(round(vet,2))
-- ERROR:
File "XXXX", line 4
    vet1=0,15
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 19:26:50) 
-- CODE:
from numpy import*

vet=array(int(input([[89.99,74.65,105.75,325.12]])
vet1(0,15)
custo=
print(round(vet,2))
-- ERROR:
File "XXXX", line 4
    vet1(0,15)
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
